--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.17",
+    "ai": "^3.2.14",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.3.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "openai": "^4.52.1",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.2",
